Fix layout shifts when initial note is selected

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -17,6 +17,7 @@ body {
 
 .top-of-screen-wrapper {
   max-height: 550px;
+  min-height: 330px;
   flex-grow: 1;
   flex-basis: 50%;
   flex-shrink: 2;
